# agent-collab

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.agent-collab/logs/: test-workflow_20260608_010704.json
.agents/skills/agent-collab/: SKILL.md
.agents/skills/agent-collab/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: agent-collab-instincts.yaml
.codex/: AGENTS.md
.github/DISCUSSION_TEMPLATE/: idea.yml  question.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
.hermes/plans/: 2026-05-23_150000-june-week1-agent-enhancements.md  2026-05-23_160000-june-week2-parallel-optimization.md
docs/: 01-business-requirements.md  02-technical-design.md  03-self-review.md  04-may-iteration-plan.md  06-june-iteration-plan.md  agent-adapter-guide.md  api-reference.md  awesome-list-pr-templates.md  blog-multi-agent-collaboration.md  business-plan.md  cli-reference.md  deferred-features-evaluation.md  github-discussions-community.md  monthly-retro-may-2026.md  roadmap.md  troubleshooting.md  user-manual.md  video-tutorial-script.md  yaml-syntax-reference.md
examples/: code-review.yaml  fullstack.yaml  real-world-demo.yaml  refactor.yaml
examples/sample_plugin/: __init__.py  agent_plugin.py  hook_plugin.py
performance_results/: large_workflow_perf_20260522_082749.json  parallel_efficiency_20260522_082854.json  perf_test_20260522_082615.json
promotion/: awesome-list-pr.md  csdn-article-fixed.md  csdn-article.md  juejin-article.md  twitter-posts.md
scripts/: large_workflow_test.py  parallel_efficiency_test.py  performance_test.py
src/agent_collab/: __init__.py  cli.py
src/agent_collab/agents/: __init__.py  aider.py  base.py  claude_code.py  codex.py  opencode.py
src/agent_collab/core/: checkpoint.py  degradation.py  executor.py  merger.py  replay.py  scheduler.py  workflow.py
src/agent_collab/display/: progress.py
src/agent_collab/distributed/: __init__.py  queue.py  scheduler.py
src/agent_collab/hitl/: __init__.py  nodes.py
src/agent_collab/llm/: __init__.py  moa.py  scheduler.py
src/agent_collab/locks/: file_lock.py
src/agent_collab/observability/: __init__.py  dag_visualizer.py  timing_stats.py  token_tracker.py
src/agent_collab/plugins/: __init__.py  hooks.py  interfaces.py  manager.py
src/agent_collab/security/: __init__.py  providers.py
src/agent_collab/storage/: __init__.py  history.py  log_manager.py
tests/: test_agents.py  test_checkpoint.py  test_cli.py  test_cli_extended.py  test_dag_visualizer.py  test_degradation.py  test_distributed.py  test_distributed_scheduler.py  test_executor.py  test_global_semaphore.py  test_history.py  test_hitl.py  test_hooks.py  test_integration.py  test_llm.py  test_locks.py  test_log_manager.py  test_merger.py  test_performance.py  test_plugins.py  test_replay.py  test_scheduler.py  test_security.py  test_timing_stats.py  test_token_tracker.py  test_workflow.py  test_workflow_enhanced.py
web/: package-lock.json  package.json
web/src/: App.tsx
web/src/components/: CustomNodes.tsx  ExecutionPanel.tsx  NodeEditor.tsx  Toolbar.tsx  WorkflowEditor.tsx
web/src/store/: workflowStore.ts
