[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-collab"
version = "3.0.0"
description = "Multi-Agent Orchestration Engine — orchestrate Claude Code, Codex, Aider to collaborate on projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "JianFei Gan", email = "jfcoder@163.com"}
]
keywords = ["ai", "agent", "claude-code", "codex", "aider", "orchestration", "multi-agent"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
agent-collab = "agent_collab.cli:app"

[project.entry-points."agent_collab.plugins"]
# Example: uncomment to register a built-in plugin
# sample-agent = "agent_collab.plugins.interfaces:AgentPlugin"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM"]
ignore = [
    "E741",   # ambiguous variable names (l, O, I) — used in existing code
    "N806",   # non-lowercase variable names — constants in functions
    "B008",   # function call in argument defaults — typer.Argument pattern
    "B017",   # broad exception assertion — test patterns
    "B027",   # empty method in ABC — intentional
    "B904",   # raise without from — low priority
    "E402",   # module level import not at top — lazy imports
    "E501",   # line too long — handled by formatter
    "SIM102", # nested if — readability preference
    "SIM115", # use context manager for open — existing patterns
    "SIM117", # nested with — readability preference
    "TC003",  # move stdlib import to type-checking block
]
per-file-ignores."src/agent_collab/__init__.py" = ["F401"]
per-file-ignores."src/agent_collab/*/__init__.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "psutil>=7.2.2",
    "pytest-cov>=7.1.0",
]
